--- a/templates/index.html
+++ b/templates/index.html
@@ -14,9 +14,53 @@
 </div>
 
 <div>
-	<a href="/survey/1">Take the Survey</a> || 
-	<a href="/privacy/">Read the Privacy Statement</a>
+  <a href="/survey/1">Take the Survey</a> || 
+  <a href="/privacy/">Read the Privacy Statement</a>
 </div>
+
+<div>
+  <form action="/" method="post">{% csrf_token %}
+    <div class="category-container">
+
+    <div class="field-wrapper question-required">
+      {{ response_form.interviewer.errors }}
+      <span class="asterix"> * </span>{{ response_form.interviewer.label_tag }}
+      <span class="form-help-text">{{ response_form.interviewer.help_text}}</span>
+      <div class="form-field-body">
+        {{ response_form.interviewer }}
+      </div>
+    </div>
+
+    <div class="field-wrapper question-required">
+      {{ response_form.interviewee.errors }}
+      <span class="asterix"> * </span>{{ response_form.interviewee.label_tag }}
+      <span class="form-help-text">{{ response_form.interviewee.help_text}}</span>
+      <div class="form-field-body">
+        {{ response_form.interviewee }}
+      </div>
+    </div>
+
+    <div class="field-wrapper">
+      {{ response_form.conditions.errors }}
+      {{ response_form.conditions.label_tag }}
+      <span class="form-help-text">{{ response_form.conditions.help_text}}</span>
+      <div class="form-field-body">
+        {{ response_form.conditions }}
+      </div>
+    </div>
+
+    <div class="field-wrapper">
+      {{ response_form.comments.errors }}
+      {{ response_form.comments.label_tag }}
+      <span class="form-help-text">{{ response_form.comments.help_text}}</span>
+      <div class="form-field-body">
+        {{ response_form.comments }}
+      </div>
+    </div>
+  </div>
+    <div class="submit-button"><input type="submit" value="I'm done!"></div>
+</form>
+
 </div>
 
 {% endblock %}
