added html and css styling

--- a/media/css/custom.css
+++ b/media/css/custom.css
@@ -14,10 +14,23 @@ html {
   background-size: cover;
 }
 
+body {
+  width: 850px;
+  margin-top: 150px;
+  float: none;
+  margin-left: auto;
+  margin-right: auto;
+  opacity:0.9;
+}
 
-
-
-
+.resultsPage {
+  margin-top: 42px;
+  width: 700px;
+  float: none;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 33px;
+}
 
 /* Lastly, apply responsive CSS fixes as necessary */
 @media (max-width: 767px) {
@@ -30,15 +43,19 @@ html {
 }
 
 .index-container {
-  width: 700px;
+  width: 850px;
   margin-top: 150px;
-}
-
-.center {
   float: none;
   margin-left: auto;
   margin-right: auto;
 }
+
+
+.surveyBox {
+  padding: 20px;
+  margin-right: 20px;
+}
+
 
 .hero-unit h1 {
   padding-bottom: 40px;
@@ -145,10 +162,19 @@ img.profile-page-img {
 }
 
 .question-required {
-  background: #E0FFD6;
+  background: #E6E6E6;
   -webkit-border-radius: 6px;
   -moz-border-radius: 6px;
   border-radius: 6px;
+}
+
+.initialForm {
+  margin-top: 0px;
+  opacity:0.9;
+}
+
+.buttonSetup {
+  margin-left: 90px;
 }
 
 h3.collapsible:hover {
@@ -204,6 +230,7 @@ label {
 #id_comments, #id_conditions {
   height: 50px;
 }
+
 
 ol.survey-questions {
   margin-left: 0px;
