--- a/templates/base.html
+++ b/templates/base.html
@@ -36,8 +36,6 @@
   {% block body %}
   {% endblock %}
 
-  <div id="push"></div> <!-- #push goes inside container -->
-  </div> <!-- /container -->
   </div> <!-- end #wrap -->
   
 
@@ -45,7 +43,7 @@
   {% endblock %}
 
 
-  <!-- Le javascript -->
+  <!-- javascript -->
   <link rel="stylesheet" href="/media/css/flick/jquery-ui-1.9.1.custom.css" />    
   <script src="/media/js/jquery-1.8.2.js"></script>
   <script src="/media/js/jquery-ui-1.9.1.custom.js"></script>  
