--- a/templates/confirm.html
+++ b/templates/confirm.html
@@ -5,7 +5,7 @@
 <div class="index-container surveyBox well">
     <h2 class="resultsHeading">Based on your answers, the curriculum generator suggests taking the following courses:</h2> <br>
     {% for myClass in classSuggested %}
-        <div class="well">{{myClass|safe}}</div>
+        <div class="classLineItem well">{{myClass|safe}}</div>
     {% endfor %}
 </div>
 
